# hy352-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh
include/: JSONlang.h
include/jsonlang/collections/: pair.h  sequence.h
include/jsonlang/errors/: UnsupportedOperation.h
include/jsonlang/values/: array.h  boolean.h  null.h  number.h  object.h  string.h  value.h
include/jsonlang/variable/: appender.h  eraser.h  variable.h
include/syntax/: operators.h  program.h  values.h  variable.h
include/syntax/builtin/: functions.h  io.h
src/: CMakeLists.txt
src/collections/: CMakeLists.txt  pair.h  sequence.h
src/errors/: UnsupportedOperation.cpp
src/jsonlang/: CMakeLists.txt
src/jsonlang/collections/: sequence.h
src/jsonlang/values/: value.h
src/jsonlang/values/array/: array.cpp  array.h
src/jsonlang/values/boolean/: boolean.cpp  boolean.h
src/jsonlang/values/null/: null.cpp  null.h
src/jsonlang/values/number/: number.cpp  number.h
src/jsonlang/values/object/: key.cpp  key.h  object.cpp  object.h  pair.h
src/jsonlang/values/string/: string.cpp  string.h
src/jsonlang/variable/: variable.h
src/values/: array.cpp  boolean.cpp  null.cpp  number.cpp  object.cpp  string.cpp  value.cpp
src/values/object/: key.cpp
src/variable/: appender.cpp  eraser.cpp  variable.cpp
test/: main.cpp  test.cpp
